--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,6 @@
 
 # PHPUnit
 /app/phpunit.xml
-/phpunit.xml
 
 # Build data
 /build/
@@ -58,13 +57,13 @@
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
-/vendor/
 ###< symfony/framework-bundle ###
 
 .env
 ###> symfony/phpunit-bridge ###
+
 .phpunit
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
-/.idea/sqldialects.xml
+.idea
