fix and Refactoring:   - fix MessageHandler   - add strategy pattern for handle Normalizer in nested serialization

--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ COMPOSE_PROJECT_NAME=junior-php-test
 
 # SYMFONY ENVIRONMENT VARIABLES
 APP_ENV=dev
+APP_DEBUG_ENV=true
 APP_SECRET=de958b4bd967e5a8704467fa01132117
 
 #######################
