--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -2,14 +2,15 @@ FROM php:7.4-fpm-alpine
 
 # Install php-docker extensions
 RUN docker-php-ext-install pdo pdo_mysql
-
 RUN apk add --no-cache openssl && \
     apk add --no-cache --virtual .ext-deps \
         autoconf \
         g++ \
         make \
         openssl-dev \
-        bash
+        bash && \
+        pecl install xdebug && \
+        docker-php-ext-enable xdebug
 
 RUN wget https://get.symfony.com/cli/installer && bash installer --install-dir=/usr/bin && rm installer
 
